# solana-monopoly-game

./: Anchor.toml  Cargo.toml  LICENSE  README.md  README_CN.md  package-lock.json  package.json
frontend/: .gitignore  Cargo.toml  Dioxus.toml  build.rs
frontend/src/: client.rs  connect.rs  create.rs  error.rs  game.rs  home.rs  join.rs  main.rs  signature.rs  wallet.rs
frontend/src/game/: console.rs  square.rs
frontend/src/game/console/: action.rs  after_moving.rs  before_moving.rs  sell.rs
frontend/src/game/console/after_moving/: buy_house.rs  mortgage.rs  sell_house.rs  sell_square.rs  unmortgage.rs
program/: Cargo.toml
program/src/: accept_sell_bid.rs  bid_for_action.rs  buy_house.rs  commit_dice_plain.rs  end_turn.rs  lib.rs  new_game.rs  roll_dice.rs  sell_square.rs  unmortgage.rs
program/src/common/: error.rs  play.rs
programs/monopoly_program/src/: accept_action_bid.rs  accept_sell_bid.rs  bid_for_sell.rs  buy_square.rs  commit_dice_hash.rs  commit_dice_plain.rs  common.rs  mortgage.rs  reject_sell_bid.rs  sell_house.rs
programs/monopoly_program/src/common/: game.rs
