[package]
name = "monopoly_frontend"
version = "0.1.0"
authors = ["Ameima <Ameima@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
solana-client-wasm = "1.18.0"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
serde = "1.0.197"
serde-wasm-bindgen = "0.6.5"
bs58 = "0.5.1"
tap = "1.0.1"
program = { package = "monopoly_program", path = "../programs/monopoly_program" }
anchor-lang = "0.29.0"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.7", features = ["getrandom"], default-futures = false }
gloo-timers = { version = "0.3.0", features = ["futures"] }
anyhow = "1.0.86"
bincode = "1.3.3"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false